refactoring: reuse logic